--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+  
+body {
+  background: #DAE2F8;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #D6A4A4, #DAE2F8);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #D6A4A4, #DAE2F8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+
 /* Header */
 
 header {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 30px;
 }
 .nav-item{
@@ -19,6 +34,7 @@ header {
   color: darkcyan;
 }
 
+/*Site*/
 .item {
   border: 2px solid #000;
   padding: 10px;
@@ -89,6 +105,8 @@ header {
 }
 
 /*Footer*/
+
+
 .footer-copyright a{
   text-decoration: none;
   font-size: 1.2 rem;
